# gis-tools

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  TODO  bacon.toml  build.ts  build.zig  bun.lockb  bunfig.toml  eslint.config.mjs  package.json  rustfmt.toml  testScript.ts  tmp.ts  tmpTests.ts  tmpTests2.ts  tsconfig.eslint.json  tsconfig.json  typedoc.json
.github/ISSUE_TEMPLATE/: 2-bug-report.md  3-feature-request.md
.github/workflows/: coveralls.yml  pages.yml  test.yml
benches/: s2_cells.rs
benchmarks/: pointIndex.js  pointIndex.ts  stores.ts  uint64.ts
config/wgsl-loader/: bun.ts
coverage/: .lcov.info.091bc2fc6ecd8719.tmp  .lcov.info.10f84d744843af19.tmp  .lcov.info.16748e2c3583b9c9.tmp  .lcov.info.2b32c864f8034d35.tmp  .lcov.info.2e1dae0dfc275d7d.tmp  .lcov.info.326724c976adbd16.tmp  .lcov.info.3a169793fdabfbb6.tmp  .lcov.info.4fd845f33d736ec8.tmp  .lcov.info.571730dffb4da4ed.tmp  .lcov.info.5b757ce6c9b124d6.tmp  .lcov.info.5e8a50202300f43a.tmp  .lcov.info.6aac79b4c9038f90.tmp  .lcov.info.6c380d012e5a9a7c.tmp  .lcov.info.6e6e1c898cf58be6.tmp  .lcov.info.6fee22d554c654bb.tmp  .lcov.info.753601c1d58d362a.tmp  .lcov.info.785b35962e5c512e.tmp  .lcov.info.82f612c190b8737c.tmp  .lcov.info.86193207e67a0cd1.tmp  .lcov.info.89f5d7cb632dde13.tmp  .lcov.info.8e6585bbc4c23d6c.tmp  .lcov.info.8f83b119209c82bb.tmp  .lcov.info.94ad413e30cf7454.tmp  .lcov.info.9676fc3e14ce785a.tmp  .lcov.info.9df1dbe467d0ae1a.tmp  .lcov.info.a0681bae03235315.tmp  .lcov.info.a0c19b2f5cef0aa9.tmp  .lcov.info.a27eba1c19d54dc6.tmp  .lcov.info.a5bddf14eb79999c.tmp  .lcov.info.b25b4b16d21d8b97.tmp  .lcov.info.c3a9103f8e0dc52f.tmp  .lcov.info.c57a0b265e60030f.tmp  .lcov.info.c5c52d0b48c19efd.tmp  .lcov.info.cf3171c06417ea44.tmp  .lcov.info.d43cea0e82b1d039.tmp  .lcov.info.d48fed3fd09ef478.tmp  .lcov.info.d6541a962487d661.tmp  .lcov.info.e60049ef63ec6266.tmp  .lcov.info.e7fe18583ded3582.tmp  .lcov.info.f1506392e6b744b1.tmp  (+3 more)
docs/: hierarchy.html  index.html  modules.html
docs-ts/: README.md  docs.md
docs-ts/converters/: toJSON.md  toTiles.md
docs-ts/dataStore/: externalSort.md  kv.md  multiMap.md  vector.md
docs-ts/dataStructures/: cache.md  pointCluster.md  pointGrid.md  pointIndex.md  pointIndexFast.md  priorityQueue.md  tile.md
docs-ts/geometry/: angles.md  bbox.md  id.md  lonlat.md  planets.md  predicates.md  s2.md  tools.md  wm.md
docs-ts/proj4/: datums.md  mgrs.md  projections.md  transformer.md
docs-ts/readers/: csv.md  gbfs.md  geotiff.md  gpx.md  grib2.md  gtfs.md  json.md  las.md  laz.md  nadgrid.md  netcdf.md  osm.md  pmtiles.md  protobuf.md  reader.md  shapefile.md  tile.md  wkt.md  xml.md
docs-ts/space/: planets.md  satellite.md
docs-ts/tools/: delaunator.md  interpolators.md  orthodrome.md  polylabel.md
docs-ts/util/: compression.md  gzip.md  lzw.md  polyfills.md
docs-ts/writers/: pmtiles.md  tile.md
docs/assets/: highlight.css  navigation.js  search.js
docs/classes/: AlbersConicEqualArea.html  AzimuthalEquidistant.html  Blob.html  BlobHeader.html  BonneWerner.html  BufferJSONReader.html  BufferReader.html  BufferWriter.html  CSVReader.html  Cache.html  CassiniSoldner.html  CylindricalEqualArea.html  DataBaseFile.html  Delaunator.html  DenseInfo.html  DenseNodes.html  EqualEarth.html  EquiRectangular.html  EquidistantConic.html  EquidistantCylindrical.html  ExtendedTransverseMercator.html  FetchReader.html  GaussKruger.html  GaussSchreiberTransverseMercator.html  Geocentric.html  GeostationarySatelliteView.html  Gnomonic.html  HeaderBBox.html  HeaderBlock.html  HotineObliqueMercator.html  Info.html  JSONReader.html  KV.html  Krovak.html  LambertAzimuthalEqualArea.html  LambertConformalConic.html  Layer.html  Mercator.html  MillerCylindrical.html  Mollweide.html  (+34 more)
docs/enums/: Compression.html  MODE.html  MemberType.html  TileType.html
docs/functions/: MercPoint.altitudeFromMercatorZ.html  MercPoint.bboxToXYZBounds.html  MercPoint.convert.html  MercPoint.latFromMercatorY.html  MercPoint.llToMerc.html  MercPoint.llToPX.html  MercPoint.llToTile.html  MercPoint.llToTilePx.html  MercPoint.lngFromMercatorX.html  MercPoint.mercToLL.html  MercPoint.mercatorLatScale.html  MercPoint.mercatorXfromLng.html  MercPoint.mercatorYfromLat.html  MercPoint.mercatorZfromAltitude.html  MercPoint.pxToLL.html  MercPoint.pxToTile.html  MercPoint.tilePxBounds.html  MercPoint.xyzToBBOX.html  S2Coords.IJtoST.html  S2Coords.STtoIJ.html  S2Coords.SiTiToST.html  S2Coords.XYZtoFace.html  S2Coords.XYZtoFaceUV.html  S2Coords.bboxST.html  S2Coords.bboxUV.html  S2Coords.faceUVtoXYZ.html  S2Coords.faceUVtoXYZGL.html  S2Coords.faceXYZGLtoUV.html  S2Coords.faceXYZtoUV.html  S2Coords.getUNorm.html  S2Coords.getVNorm.html  S2Coords.linearSTtoUV.html  S2Coords.linearUVtoST.html  S2Coords.lonLatToXYZ.html  S2Coords.lonLatToXYZGL.html  S2Coords.neighborsIJ.html  S2Coords.quadraticSTtoUV.html  S2Coords.quadraticUVtoST.html  S2Coords.tanSTtoUV.html  S2Coords.tanUVtoST.html  (+196 more)
docs/interfaces/: Authority.html  CSVReaderOptions.html  Cluster.html  ClusterOptions.html  ConvertedGeometry.html  DBFHeader.html  DBFRow.html  (+58 more)
proj4js-master/: bun.lockb
rust/: lib.rs  s2cell.rs  uint64.rs
rust/geometry/: Cargo.toml  cargo.toml  id.rs  mod.rs  tmp.toml
rust/geometry/ll/: mod.rs
rust/geometry/planets/: earth.rs
rust/geometry/predicates/: mod.rs  orient2d.rs  util.rs
rust/geometry/s1/: angle.rs  chord_angle.rs  mod.rs
rust/geometry/s2/: cap.rs  cellid.rs  convert.rs  coords.rs  coords_internal.rs  metrics.rs  mod.rs  point.rs
rust/geometry/src/: lib.rs  lonlat.rs  tile.rs
rust/geometry/src/planets/: earth.rs  mod.rs
rust/geometry/src/s1/: angle.rs
rust/geometry/src/s2/: cellid.rs  coords.rs  coords_internal.rs  mod.rs  point.rs
rust/geometry/tools/: clip.rs  convert.rs  mod.rs  simplify.rs
rust/geometry/wm/: convert.rs  coords.rs  mod.rs
rust/s2cell/: Cargo.toml
rust/s2cell/src/: lib.rs
src/: file.ts  index.ts  mmap.ts  polyfills.ts
tests/: polyfill.ts  server.ts  uint64.test.ts
tools/: buildBadges.ts  buildBundles.ts  buildCoverage.ts  buildEPSG.ts  buildProjCrs.py
(+9161 files in other folders)
