[workspace]
resolver = "2"
members = [
    "rust/geometry",
    # "rust/s2cell",
    # "rust/uint64"
]

default-members = [
  "rust/geometry"
]

[workspace.package]
# name = "gis-tools"
version = "1.0.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "A collection of geospatial tools primarily designed for WGS84, Web Mercator, and S2."
documentation = "https://docs.rs/gis-tools"
homepage = "https://github.com/OpenS2/gis-tools"
repository = "https://github.com/OpenS2/gis-tools"
readme = "README.md"
categories = ["no-std", "algorithms"]
keywords = ["tools", "s2", "gis", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
# include = ["/ovtile", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
exclude = [
    "/assets",
    "/benchmarks",
    "/docs",
    "/test",
    "/tools",
    "/src",
    "/coverage",
    "/dist",
    "/experiments",
    "/node_modules",
    "/build_bundle_tmp",
    ".github",
    ".helix"
]

# [lib]
# crate-type = ["cdylib"]
# name = "rust"
# path = "rust/lib.rs"
# bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

# [dev-dependencies]

# [features]
# default = ["std"]
# std = []

# [profile.bench]
# opt-level = 3
