[package]
name = "gis-tools"
version = "1.0.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "A collection of geospatial tools primarily designed for WGS84, Web Mercator, and S2."
documentation = "https://docs.rs/gis-tools"
homepage = "https://github.com/OpenS2/gis-tools"
repository = "https://github.com/OpenS2/gis-tools"
readme = "README.md"
categories = ["no-std", "algorithms"]
keywords = ["tools", "s2", "gis", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
# include = ["/ovtile", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
exclude = [
    "/assets",
    "/benchmarks",
    "/docs",
    "/tests",
    "/tools",
    "/src",
    "/coverage",
    "/dist",
    "/experiments",
    "/node_modules",
    "/build_bundle_tmp",
    ".github",
    "/config",
    "/docs-ts",
    "/docs-rs",
    "build.*",
    ".helix"
]

[lib]
name = "gistools"
path = "rust/lib.rs"
bench = true

[features]
default = ["std", "quadratic"] # Default feature
quadratic = []          # Feature for quadratic projection
tan = []                # Feature for tangential projection
linear = []             # Feature for linear projection

# Conditional std feature enabling quadratic or other projection features
std = ["flate2", "brotli", "ruzstd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbf = "1"
s2json = "1"
libm = "0.2"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# STD dependencies
flate2 = { version = "1", optional = true }
brotli = { version = "7", optional = true }
ruzstd = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "s2_cells"
harness = false

[profile.bench]
inherits = "release"
opt-level = 3
