[package]
name = "s2cell"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/OpenS2/gis-tools/rust/s2cell"
license = "MIT"
categories = ["web-programming", "no-std", "wasm"]

[dependencies]
lol_alloc = "0.4.1"
geometry = { path = "../geometry" }

[lib]
crate-type = ["cdylib"]
name = "s2cell"
path = "src/lib.rs"
bench = true

[build]
target = "wasm32-unknown-unknown"
rustflags = ["--cfg", "feature=\"wasm\""]

[profile.release]
lto = true
# debug = true
opt-level = "z"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
